--- a/dev/templates/modal.html
+++ b/dev/templates/modal.html
@@ -22,6 +22,11 @@
         <li><a href="#forgot-pass" class="el-btn blue-style">Forgot password</a></li>
         <li><a href="#forgot-thx" class="el-btn blue-style">Forgot success</a></li>
         <li><a href="#promo-code" class="el-btn blue-style">Promo code</a></li>
+        <!-- new modals -->
+        <li><a href="#start-date" class="el-btn blue-style">Дата начала</a></li>
+        <li><a href="#disable-course" class="el-btn blue-style">Отписаться от курса</a></li>
+        <li><a href="#disable-course-extended" class="el-btn blue-style">Отписаться от курса 2</a></li>
+        <li><a href="#pick-schedule" class="el-btn blue-style">Режим обучения</a></li>
       </ul>
       <!-- End Modal window call button -->
 
