new course page

--- a/dev/sass/components/elements.sass
+++ b/dev/sass/components/elements.sass
@@ -395,3 +395,14 @@
     float: right
     color: black
     font: 400 12px $open
+
+
+
+//new el style
+//-----------------------------------------------------------------------------------------
+section
+  &.css-shadow
+    padding: 20px 30px
+    border-radius: 3px
+    background-color: white
+    box-shadow: 0 9px 24px #e6eaf8
