--- a/dev/sass/components/modal.sass
+++ b/dev/sass/components/modal.sass
@@ -376,7 +376,7 @@
         width: 50%
         float: left
 
-  @media (max-width: 850px)
+  @media (max-width: 860px)
     width: 300px
     padding: 54px 30px 58px
     .modal-title
@@ -391,6 +391,7 @@
           width: 100% 
         .pick-schedule-content-frame-price
           position: static
+          margin-top: 15px
         .pick-schedule-content-frame-selected
           right: auto
           left: 10px
