--- a/dev/templates/courses1.html
+++ b/dev/templates/courses1.html
@@ -74,14 +74,14 @@
                             <div class="title-section">Из учебного плана</div>
                             <section class="css-shadow skill-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-2 text-center">
+                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                         <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
-                                    <div class="col-md-10">
+                                    <div class="col-md-9 col-lg-10">
                                         <div class="row inform-block">
 
-                                            <div class="course-desc col-md-7">
+                                            <div class="course-desc col-lg-7 col-xs-12">
                                                 <div class="title-name">
                                                     Курс <a href="#">Программирование волшебных единорогов</a>
                                                 </div>
@@ -99,9 +99,11 @@
                                                             <div class="academic-item"></div>
                                                         </div>
                                                         <div class="icon-success"><img src="images/icons/icon-check.svg" alt=""></div>
+                                                        <div class="addition-info">
+                                                            <p class="mark">45 из 100 баллов</p>
+                                                            <p class="availability-cert">Вы получили  сертификат!</p>
+                                                        </div>
                                                     </div>
-                                                    <p class="mark">45 из 100 баллов</p>
-                                                    <p class="availability-cert">Вы получили  сертификат!</p>
                                                 </div>
                                                 <form action="#" class="rating-stars">
                                                     <div class="stars">
@@ -129,7 +131,7 @@
                                                 </form>
                                             </div>
 
-                                            <div class="share-info col-md-5 text-right">
+                                            <div class="share-info col-lg-5 col-xs-8">
                                                 <div class="visibility-block">
                                                     <button>К материалам курса</button>
                                                     <button>Поделиться в соцсетях</button>
@@ -190,16 +192,16 @@
 
 
                             <!-- Begin section -->
-                            <section class="css-shadow skill-columns">
+                            <section class="css-shadow skill-columns hidden-columns">
                                 <div class="row course-block">
-                                    <div class="col-md-2 text-center">
+                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                         <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
-                                    <div class="col-md-10">
+                                    <div class="col-md-9 col-lg-10">
                                         <div class="row inform-block">
 
-                                            <div class="course-desc col-md-7">
+                                            <div class="course-desc col-lg-7 col-xs-12">
                                                 <div class="title-name">
                                                     Курс <a href="#">Программирование волшебных единорогов</a>
                                                 </div>
@@ -244,7 +246,7 @@
                                                 </form>
                                             </div>
 
-                                            <div class="share-info col-md-5 text-right">
+                                            <div class="share-info col-lg-5 col-xs-8">
                                                 <div class="visibility-block">
                                                     <button>К материалам курса</button>
                                                     <button>Поделиться в соцсетях</button>
