--- a/dev/sass/pages/course1.sass
+++ b/dev/sass/pages/course1.sass
@@ -1,9 +1,9 @@
 .media
 
   &:after
-    content: ''
     display: table
     clear: both
+    content: ''
 
   .right-part
     float: left
@@ -11,18 +11,18 @@
 
 
   .left-part
+    position: relative
+    top: -7px
     float: left
     margin-right: 20px
     text-align: center
-    position: relative
-    top: -7px
 
 .course-block
 
   .partner-logo
     display: inline-block
-    text-decoration: none
     margin-bottom: 10px
+    text-decoration: none
     
   .sertificat
     position: relative
@@ -34,13 +34,13 @@
 
 
 .course-desc
-  width: 405px
   margin-left: -3px
+  width: 405px
   .title-name
     margin-top: -7px
     color: #4a72f5
-    font: 400 16px/24px $open
     white-space: nowrap
+    font: 400 16px/24px $open
 
     @media (max-width: $screen-xs-max)
       white-space: normal
@@ -50,19 +50,19 @@
       text-decoration: none
 
 .course-process
-  white-space: nowrap
   position: relative
   margin-bottom: 12px
+  white-space: nowrap
 
   div
     display: inline-block
 
   .academic-performance
-    line-height: 1
-    width: 238px
     position: relative
     margin-left: 20px
+    width: 238px
     vertical-align: top
+    line-height: 1
     
     .progress
       position: relative
@@ -71,44 +71,60 @@
     .line
       position: absolute
       top: 25px
-      left: 10px
       right: 14px
+      left: 10px
+      z-index: 1
       height: 2px
       background-color: #eff4f7
-      z-index: 1
 
 
     .academic-item
       //position: absolute
       position: relative
+      top: 19px
       z-index: 2
       float: right
-      width: 13px
-      top: 19px
-      margin-right: 14px
-      height: 13px
-      background-color: #eff4f7
-      border-radius: 50%
       overflow: hidden
+      margin-right: 14px
+      width: 13px
+      height: 13px
+      border-radius: 50%
+      background-color: #eff4f7
 
 
       &:after
         position: absolute
-        content: ''
-        width: 7px
-        height: 7px
-        background-color: #fff
-        border-radius: 50%
-        overflow: hidden
         top: 3px
         left: 3px
+        overflow: hidden
+        width: 7px
+        height: 7px
+        border-radius: 50%
+        background-color: #fff
+        content: ''
 
       + .academic-item
         margin-right: 25px
 
       &.active
-        &:after
+        &:before
+          position: absolute
+          top: 4px
+          left: 4px
+          z-index: 3
+          overflow: hidden
+          width: 5px
+          height: 5px
+          border-radius: 50%
           background-color: #61e7d6
+          content: ''
+
+        &:after
+          top: 2px
+          left: 2px
+          width: 9px
+          height: 9px
+
 
         ~ .academic-item
           &:after
@@ -130,38 +146,38 @@
     margin-top: -3px
 
     &:after
-      content: ''
       display: table
       clear: both
+      content: ''
 
   .mark
-    color: #9b9b9b
-    font: 400  13px/14px $open
     float: left
+    color: #9b9b9b
     white-space: normal
+    font: 400  13px/14px $open
 
   .availability-cert
     float: right
-    color: black
-    font: 400 13px/14px $open
-    max-width: 100px
-    white-space: normal
     margin-right: -6px
+    max-width: 100px
+    color: black
+    white-space: normal
+    font: 400 13px/14px $open
 
 
 
 .rating-stars
   display: block
-  height: 20px
-  line-height: 1
   margin-bottom: 15px
+  height: 20px
   color: #9b9b9b
   font: 400 13px $open
+  line-height: 1
 
   .stars
-    font-size: 0
-    width: 100px
     display: inline-block
+    width: 100px
+    font-size: 0
 
 
   input
@@ -185,12 +201,12 @@
   label
     float: right
     &:before
-      content: ''
       display: inline-block
       width: 16px
       height: 15px
-      background-repeat: no-repeat
       background-image: url('data:image/svg+xml;charset=utf-8,<svg  xmlns="http://www.w3.org/2000/svg" width="16" height="14"><defs id="SvgjsDefs1009"><clipPath id="SvgjsClipPath1012"><path id="SvgjsPath1011" d="M945.392 669.43L941.5360000000001 669.074C941.293 669.053 941.0830000000001 668.901 940.9830000000001 668.675L939.6020000000001 665.4029999999999C939.3810000000001 664.8629999999999 938.5970000000001 664.8629999999999 938.3760000000001 665.4029999999999L937.0060000000001 668.675C936.917 668.901 936.6960000000001 669.053 936.4530000000001 669.074L932.5970000000001 669.43C932.0230000000001 669.4849999999999 931.7900000000001 670.1859999999999 932.2210000000001 670.564L935.1270000000001 673.058C935.315 673.22 935.392 673.458 935.3370000000001 673.6949999999999L934.464 677.194C934.3320000000001 677.7439999999999 934.9390000000001 678.198 935.4480000000001 677.906L938.6630000000001 676.06C938.8730000000002 675.9409999999999 939.1270000000002 675.9409999999999 939.3370000000001 676.06L942.5520000000001 677.906C943.0600000000002 678.198 943.6680000000001 677.755 943.5350000000001 677.194L942.6740000000001 673.6949999999999C942.618 673.458 942.6960000000001 673.2199999999999 942.8840000000001 673.058L945.7890000000001 670.564C946.2090000000001 670.1859999999999 945.9660000000001 669.485 945.392 669.43Z " fill="#ffffff"></path></clipPath></defs><path id="SvgjsPath1010" d="M945.392 669.43L941.5360000000001 669.074C941.293 669.053 941.0830000000001 668.901 940.9830000000001 668.675L939.6020000000001 665.4029999999999C939.3810000000001 664.8629999999999 938.5970000000001 664.8629999999999 938.3760000000001 665.4029999999999L937.0060000000001 668.675C936.917 668.901 936.6960000000001 669.053 936.4530000000001 669.074L932.5970000000001 669.43C932.0230000000001 669.4849999999999 931.7900000000001 670.1859999999999 932.2210000000001 670.564L935.1270000000001 673.058C935.315 673.22 935.392 673.458 935.3370000000001 673.6949999999999L934.464 677.194C934.3320000000001 677.7439999999999 934.9390000000001 678.198 935.4480000000001 677.906L938.6630000000001 676.06C938.8730000000002 675.9409999999999 939.1270000000002 675.9409999999999 939.3370000000001 676.06L942.5520000000001 677.906C943.0600000000002 678.198 943.6680000000001 677.755 943.5350000000001 677.194L942.6740000000001 673.6949999999999C942.618 673.458 942.6960000000001 673.2199999999999 942.8840000000001 673.058L945.7890000000001 670.564C946.2090000000001 670.1859999999999 945.9660000000001 669.485 945.392 669.43Z " fill-opacity="0" fill="#ffffff" stroke-dasharray="0" stroke-linejoin="miter" stroke-linecap="butt" stroke-opacity="1" stroke="#c3c3c3" stroke-miterlimit="50" stroke-width="2" clip-path="url(&quot;#SvgjsClipPath1012&quot;)" transform="matrix(1,0,0,1,-931,-664)"></path></svg>')
+      background-repeat: no-repeat
+      content: ''
 
     &:nth-of-type( 2n + 3 )
       margin-right: 5px
@@ -198,9 +214,9 @@
   .half
     &:before
       position: absolute
-      width: 7px
       z-index: 20
       overflow: hidden
+      width: 7px
 
   span
     position: relative
@@ -209,11 +225,11 @@
 
 
 .share-info
+  margin-bottom: 15px
+  text-align: right
   white-space: normal
   font-size: 0
   line-height: 1
-  text-align: right
-  margin-bottom: 15px
 
   @media (max-width: $screen-md-max)
     text-align: left
@@ -224,42 +240,40 @@
 
     button
       display: inline-block
-      text-align: center
-      padding: 3px
       box-sizing: border-box
+      padding: 3px
       max-width: 100px
       height: 47px
-      color: black
-      background-color: #e2e3e9
+      text-align: center
       font: 400 12px/18px $open
 
       + button
         margin-left: 1px
 
     .btn-arrow
+      position: relative
       width: 47px
       height: 47px
-      position: relative
       background-color: #d3d4dc
       
       &:before,
       &:after  
-        content: ''
         position: absolute
+        top: 22px
         width: 11px
         height: 2px
         background-color: black
-        top: 22px
+        content: ''
         transition: all 0.1s ease
 
 
       &:before
-        transform: rotate(45deg)
         left: 14px
+        transform: rotate(45deg)
 
       &:after
-        transform: rotate(-45deg)
         right: 15px
+        transform: rotate(-45deg)
 
       &.visible
         &:before
@@ -271,31 +285,31 @@
 
     
   .hidden-block
-    display: none
-    z-index: 5
-    text-align: right
     right: 15px
+    z-index: 5
+    display: none
+    text-align: right
 
     @media (max-width: $screen-md-max)
       text-align: left
     a
+      display: inline-block
+      box-sizing: border-box
+      margin-top: 9px
       width: 155px
       height: 38px
-      display: inline-block
-      margin-top: 9px
-      box-sizing: border-box
-      font: 400 12px $open
       text-align: center
       text-decoration: none
+      font: 400 12px $open
       line-height: 38px
 
-    .link-blue
-      background-color: #5076f5
-      color: #fff
+  .btn-blue
+    background-color: #5076f5
+    color: #fff
 
-    .link-white
-      border: 1px solid #e2e3e9
-      color: #000
+  .btn-white
+    border: 1px solid #e2e3e9
+    color: #000
 
     
 .competence-block
@@ -303,8 +317,8 @@
 
   .title-competence
     margin-bottom: 9px
-    font: 400 15px $open
     color: black
+    font: 400 15px $open
 
 .skill-columns
 
@@ -315,24 +329,24 @@
     position: relative
 
     &:after
-      content: ''
       position: absolute
-      bottom: 20px
       right: 34px
+      bottom: 20px
       width: 27px
       height: 5px
       background-image: url('data:image/svg+xml;charset=utf-8, <svg xmlns="http://www.w3.org/2000/svg"  width="27" height="5"><defs></defs><path d="M1473 2213L1473 2208L1478 2208L1478 2213Z " fill="#5076f5" transform="matrix(1,0,0,1,-1473,-2208)"></path><path d="M1484 2213L1484 2208L1489 2208L1489 2213Z " fill="#5076f5" transform="matrix(1,0,0,1,-1473,-2208)"></path><path  d="M1495 2213L1495 2208L1500 2208L1500 2213Z " fill="#5076f5" transform="matrix(1,0,0,1,-1473,-2208)"></path></svg>')
+      content: ''
 
     .img
-      height: 85px
       overflow: hidden
+      height: 85px
 
   .competence-block
     .skill
-      column-count: 2
-      column-gap: 0
       margin: 0
       width: 525px
+      column-count: 2
+      column-gap: 0
 
       @media (max-width: $screen-md-max) and (min-width: $screen-sm-max)
         width: 477px
@@ -342,9 +356,9 @@
         max-width: 100%
 
       li
+        box-sizing: border-box
         padding: 10px 0
         width: 229px
-        box-sizing: border-box
 
         &:hover
           padding: 10px 0
