--- a/dev/templates/courses10.html
+++ b/dev/templates/courses10.html
@@ -133,13 +133,13 @@
 
                                             <div class="share-info col-lg-5 col-xs-8">
                                                 <div class="visibility-block">
-                                                    <button class="btn-white">К материалам курса</button>
-                                                    <button class="btn-blue">Поделиться в соцсетях</button>
+                                                    <button>К материалам курса</button>
+                                                    <button>Поделиться в соцсетях</button>
                                                     <button class="js-show-block btn-arrow"></button>
                                                 </div>
                                                 <div class="hidden-block">
-                                                    <a class="btn-white" href="#">К странице курса</a>
-                                                    <a class="btn-white" href="#">Сертификат</a>
+                                                    <a class="link-blue" href="#">К странице курса</a>
+                                                    <a class="link-white" href="#">Сертификат</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -195,7 +195,7 @@
                             <section class="css-shadow skill-columns hidden-columns">
                                 <div class="row course-block">
                                     <div class="col-md-3 col-lg-2 col-xs-3 text-center">
-                                        <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
+                                        <div class="img"><img src="images/courses/img-1.jpg" alt=""></div>
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
                                     <div class="col-md-9 col-lg-10">
