--- a/dev/sass/pages/index.sass
+++ b/dev/sass/pages/index.sass
@@ -128,6 +128,7 @@
           color: #4a72f5
 
     .wrap-drop
+      position: relative
       @extend %clear-fix
       margin-top: 30px
       @media (max-width: $screen-sm-max)
