--- a/css/style.css
+++ b/css/style.css
@@ -1562,7 +1562,6 @@ html {
   position: relative;
   display: block;
   margin: 0 auto;
-  margin-bottom: 15px;
   max-width: 220px;
   width: 100%;
   color: rgba(0, 0, 0, 0.7);
@@ -2817,6 +2816,7 @@ b.error {
         border-color: #4a72f5;
         color: #4a72f5; }
   .home-page .section-1 .wrap-drop {
+    position: relative;
     margin-top: 30px; }
     @media (max-width: 991px) {
       .home-page .section-1 .wrap-drop {
