--- a/dev/sass/components/elements.sass
+++ b/dev/sass/components/elements.sass
@@ -403,6 +403,12 @@
 section
   &.css-shadow
     padding: 20px 30px
-    border-radius: 3px
+    //border-radius: 3px
     background-color: white
     box-shadow: 0 9px 24px #e6eaf8
+    
+.el-grey-txt
+  color: #9b9b9b
+.el-black-txt
+  color: #000
+  
