--- a/dev/sass/pages/personal.sass
+++ b/dev/sass/pages/personal.sass
@@ -348,6 +348,7 @@
       .wrap-img
         float: left
         margin-right: 25px
+        margin-bottom: 25px
         width: 140px
         height: 140px
         border: 2px solid #eff4f7
@@ -360,9 +361,9 @@
           vertical-align: middle
 
       .wrap-info
-        margin-top: 10px
-        margin-left: 165px
+        margin: 10px 0 25px 165px
         display: block
+
 
       .el-progress-wrap
         margin-bottom: 37px
