--- a/dev/templates/courses10-1.html
+++ b/dev/templates/courses10-1.html
@@ -10,7 +10,7 @@
     <!-- /build -->
 
     <!-- Begin personal Page -->
-    <div id="page-body" class="page-body personal-page">
+    <div id="page-body" class="page-body personal-page courses-page">
         <div class="page-content left-sidebar">
             <div class="container">
                 <div class="row">
@@ -33,7 +33,7 @@
                         <div class="content">
 
                             <!-- Begin section-1 -->
-                            <section class="css-shadow section-1">
+                            <section class="css-shadow section-1 cours-status">
                                 <div class="row">
                                     <h2 class="title-section col-sm-8">Привет, Мария Иванова!</h2>
                                     <div class="col-sm-4">
@@ -66,7 +66,12 @@
                                         <p>Вы развили 3 компетенции</p>
                                     </div>
                                 </div>
-                                
+                                <div class="courses-status">
+                                    <a href="#">Идут 4 курса</a>
+                                    <a href="#">Скоро начнуться 2</a>
+                                    <a href="#">Пройдено 2</a>
+                                    <a class="active" href="#">Все 14</a>
+                                </div>
                             </section>
                             <!-- End section-1 -->
 
@@ -79,9 +84,9 @@
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
                                     <div class="col-md-9 col-lg-10">
-                                        <div class="row inform-block">
+                                        <div class="inform-block">
 
-                                            <div class="course-desc col-lg-7 col-xs-12">
+                                            <div class="course-desc">
                                                 <div class="title-name">
                                                     Курс <a href="#">Программирование волшебных единорогов</a>
                                                 </div>
@@ -93,45 +98,23 @@
                                                             <div class="line"></div>
                                                             <div class="academic-item"></div>
                                                             <div class="academic-item"></div>
-                                                            <div class="academic-item active"></div>
+                                                            <div class="academic-item indic-success"></div>
                                                             <div class="academic-item"></div>
                                                             <div class="academic-item"></div>
                                                             <div class="academic-item"></div>
                                                         </div>
                                                         <div class="icon-success"><img src="images/icons/icon-check.svg" alt=""></div>
                                                         <div class="addition-info">
-                                                            <p class="mark">45 из 100 баллов</p>
-                                                            <p class="availability-cert">Вы получили  сертификат!</p>
+                                                            <p class="mark"><span class="el-black-txt"></span>45 из 100 баллов</p>
+                                                            <p class="availability-cert"><span class="el-grey-txt">Вы получили  сертификат!</span></p>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <form action="#" class="rating-stars">
-                                                    <div class="stars">
-                                                        <input type="radio" id="star5" name="rating" value="5" />
-                                                        <label class ="full" for="star5"></label>
-                                                        <input type="radio" id="star4half" name="rating" value="4 and a half" />
-                                                        <label class="half" for="star4half"></label>
-                                                        <input type="radio" id="star4" name="rating" value="4" />
-                                                        <label class="full" for="star4"></label>
-                                                        <input type="radio" id="star3half" name="rating" value="3 and a half" />
-                                                        <label class="half" for="star3half"></label>
-                                                        <input type="radio" id="star3" name="rating" value="3" />
-                                                        <label class="full" for="star3"></label>
-                                                        <input type="radio" id="star2half" name="rating" value="2 and a half" checked />
-                                                        <label class="half" for="star2half"></label>
-                                                        <input type="radio" id="star2" name="rating" value="2" />
-                                                        <label class="full" for="star2"></label>
-                                                        <input type="radio" id="star1half" name="rating" value="1 and a half" />
-                                                        <label class="half" for="star1half"></label>
-                                                        <input type="radio" id="star1" name="rating" value="1" />
-                                                        <label class="full" for="star1"></label>
-                                                        <input type="radio" id="starhalf" name="rating" value="half" />
-                                                        <label class="half" for="starhalf"></label>
-                                                    </div>
-                                                </form>
+                                                <!-- build:section layout.stars -->
+                                                <!-- /build -->
                                             </div>
 
-                                            <div class="share-info col-lg-5 col-xs-8">
+                                            <div class="share-info">
                                                 <div class="visibility-block">
                                                     <button class="btn-white">К материалам курса</button>
                                                     <button class="btn-blue">Поделиться в соцсетях</button>
@@ -189,8 +172,6 @@
                             </section>
                             <!-- End section -->
 
-
-
                             <!-- Begin section -->
                             <section class="css-shadow skill-columns hidden-columns">
                                 <div class="row course-block">
@@ -199,9 +180,9 @@
                                         <a href="#" class="partner-logo"><img src="images/courses/logo.jpg" alt=""></a>
                                     </div>
                                     <div class="col-md-9 col-lg-10">
-                                        <div class="row inform-block">
+                                        <div class="inform-block">
 
-                                            <div class="course-desc col-lg-7 col-xs-12">
+                                            <div class="course-desc">
                                                 <div class="title-name">
                                                     Курс <a href="#">Программирование волшебных единорогов</a>
                                                 </div>
@@ -219,37 +200,14 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <form action="#" class="rating-stars">
-                                                    <span>Оставьте отзыв</span>
-                                                    <div class="stars">
-                                                        <input type="radio" id="star5_2" name="rating" value="5" />
-                                                        <label class ="full" for="star5_2"></label>
-                                                        <input type="radio" id="star4half_2" name="rating" value="4 and a half" />
-                                                        <label class="half" for="star4half_2"></label>
-                                                        <input type="radio" id="star4_2" name="rating" value="4" />
-                                                        <label class="full" for="star4_2"></label>
-                                                        <input type="radio" id="star3half_2" name="rating" value="3 and a half" />
-                                                        <label class="half" for="star3half_2"></label>
-                                                        <input type="radio" id="star3_2" name="rating" value="3" />
-                                                        <label class="full" for="star3_2"></label>
-                                                        <input type="radio" id="star2half_2" name="rating" value="2 and a half" checked />
-                                                        <label class="half" for="star2half_2"></label>
-                                                        <input type="radio" id="star2_2" name="rating" value="2" />
-                                                        <label class="full" for="star2_2"></label>
-                                                        <input type="radio" id="star1half_2" name="rating" value="1 and a half" />
-                                                        <label class="half" for="star1half_2"></label>
-                                                        <input type="radio" id="star1_2" name="rating" value="1" />
-                                                        <label class="full" for="star1_2"></label>
-                                                        <input type="radio" id="starhalf_2" name="rating" value="half" />
-                                                        <label class="half" for="starhalf_2"></label>
-                                                    </div>
-                                                </form>
+                                                <!-- build:section layout.stars -->
+                                                <!-- /build -->
                                             </div>
 
-                                            <div class="share-info col-lg-5 col-xs-8">
+                                            <div class="share-info">
                                                 <div class="visibility-block">
-                                                    <button>К материалам курса</button>
-                                                    <button>Поделиться в соцсетях</button>
+                                                    <button class="btn-white">К материалам курса</button>
+                                                    <button class="btn-blue">Поделиться в соцсетях</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -258,9 +216,6 @@
                                 </div>
                             </section>
                             <!-- End section -->
-
-
-
 
                         </div>
                         <!-- End content -->
