--- a/dev/sass/pages/course1.sass
+++ b/dev/sass/pages/course1.sass
@@ -418,6 +418,7 @@
         box-sizing: border-box
         padding: 10px 0
         width: 229px
+        vertical-align: top
 
         &:hover
           padding: 10px 0
