--- a/dev/templates/courses10.html
+++ b/dev/templates/courses10.html
@@ -293,9 +293,13 @@
                                                         </span>
                                                     </li>
                                                 </ul>
-                                                <div class="get-mail">
-                                                    <input type="checkbox" name="subscribe" id="sub1" checked>
-                                                    <label for="sub1"><span class="el-black-txt">Получать рассылку</span></label>
+                                                <div class="pick-schedule-content-bottom">
+                                                    <div class="styled-cb">
+                                                        <input type="checkbox" id="cb-uslov" checked>
+                                                        <label for="cb-uslov">
+                                                            Получать рассылку
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -304,7 +308,7 @@
                                 <!-- End specialization section -->
 
                                 <!-- Begin course  section -->
-                                <section class="css-shadow skill-columns hidden-columns">
+                                <section class="css-shadow skill-columns">
                                     <div class="row course-block">
                                         <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                             <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
@@ -349,7 +353,7 @@
                                 <!-- End course  section -->
 
                                 <!-- Begin course section -->
-                                <section class="css-shadow skill-columns hidden-columns">
+                                <section class="css-shadow skill-columns">
                                     <div class="row course-block">
                                         <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                             <div class="img"><img src="images/courses/img-2.jpg" alt=""></div>
@@ -481,9 +485,13 @@
                                                         </span>
                                                     </li>
                                                 </ul>
-                                                <div class="get-mail">
-                                                    <input type="checkbox" name="subscribe" id="sub2" checked>
-                                                    <label for="sub2"><span class="el-black-txt">Получать рассылку</span></label>
+                                                <div class="pick-schedule-content-bottom">
+                                                    <div class="styled-cb">
+                                                        <input type="checkbox" id="cb-uslov1" checked>
+                                                        <label for="cb-uslov1">
+                                                            Получать рассылку
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -532,7 +540,7 @@
                             <!-- End group courses -->
 
                             <!-- Begin course section -->
-                            <section class="css-shadow skill-columns hidden-columns">
+                            <section class="css-shadow skill-columns">
                                 <div class="row course-block">
                                     <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                         <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
@@ -582,7 +590,7 @@
 
                             <!-- Begin course section -->
                             <div class="title-section">Другие курсы</div>
-                            <section class="css-shadow skill-columns hidden-columns">
+                            <section class="css-shadow skill-columns">
                                 <div class="row course-block">
                                     <div class="col-md-3 col-lg-2 col-xs-3 text-center">
                                         <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
@@ -619,7 +627,44 @@
                             </section>
                             <!-- End course section -->
 
+                            <!-- Begin course section -->
+                            <section class="css-shadow skill-columns">
+                                <div class="row course-block">
+                                    <div class="col-md-3 col-lg-2 col-xs-3 text-center">
+                                        <div class="img"><img src="images/courses/img-3.jpg" alt=""></div>
+                                        <a href="#" class="partner-logo"><img src="images/courses/logo-3.png" alt=""></a>
+                                    </div>
+                                    <div class="col-md-9 col-lg-10">
+                                        <div class="inform-block">
+                                            <div class="course-desc">
+                                                <div class="title-name">
+                                                    Курс <a href="#">Beyond Silicon Valley: Growing Entrepreneurship in Transitioning Economies</a>
+                                                </div>
+                                                <div class="course-process">
+                                                    <span class="black-txt">с 16 сентября</span>
+                                                </div>
+                                                <!-- build:section layout.stars -->
+                                                <!-- /build -->
+                                            </div>
 
+                                            <div class="share-info">
+                                                <div class="visibility-block">
+                                                    <button class="btn-white">Продолжить обучение</button>
+                                                    <button class="btn-blue">Получить сертификат</button>
+                                                    <button class="js-show-block btn-arrow"></button>
+                                                </div>
+                                                <div class="hidden-block">
+                                                    <a class="btn-white" href="#">Поменять сессию</a>
+                                                    <a class="btn-white" href="#">К странице курса</a>
+                                                    <a class="btn-white btn-unsubscribe" href="#">Отписаться</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </section>
+                            <!-- End course section -->
 
                         </div>
                         <!-- End content -->
