--- a/css/style.css
+++ b/css/style.css
@@ -4644,7 +4644,7 @@ section.css-shadow {
     .personal-page .page-content .section-1 .wrap-img {
       float: left;
       margin-right: 25px;
-      margin-bottom: 25px;
+      margin-bottom: 30px;
       width: 140px;
       height: 140px;
       border: 2px solid #eff4f7;
@@ -4661,7 +4661,7 @@ section.css-shadow {
       .personal-page .page-content .section-1 .wrap-img img {
         vertical-align: middle; }
     .personal-page .page-content .section-1 .wrap-info {
-      margin: 10px 0 25px 165px;
+      margin: 10px 0 30px 165px;
       display: block; }
       @media (max-width: 991px) {
         .personal-page .page-content .section-1 .wrap-info {
@@ -4673,7 +4673,8 @@ section.css-shadow {
       color: #9b9b9b;
       font: 400 14px/20px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
       .personal-page .page-content .section-1 .sertificat img {
-        margin-right: 5px; }
+        margin-right: 5px;
+        width: 26px; }
     .personal-page .page-content .section-1 .bal {
       color: black;
       font: 400 46px/50px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
@@ -5146,7 +5147,7 @@ section.css-shadow {
           font-weight: 400; }
 
 .courses-page .css-shadow.cours-status {
-  padding-bottom: 0; }
+  padding: 20px 26px 0; }
 
 .courses-status {
   display: -ms-flexbox;
@@ -5164,12 +5165,12 @@ section.css-shadow {
   .courses-status a {
     display: inline-block;
     box-sizing: border-box;
-    height: 50px;
+    height: 57px;
     color: #000;
     text-align: center;
     text-decoration: none;
     white-space: normal;
-    font: 400 14px/50px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font: 400 14px/57px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
     -ms-flex-positive: 2;
         flex-grow: 2; }
     .courses-status a + a {
@@ -5184,12 +5185,14 @@ section.css-shadow {
 .course-block .partner-logo {
   display: inline-block;
   margin-bottom: 10px;
-  text-decoration: none;
-  vertical-align: top; }
+  vertical-align: top;
+  text-decoration: none; }
 .course-block .sertificat {
   position: relative;
-  top: 10px;
-  margin-left: 3px; }
+  top: 13px;
+  margin-left: 9px; }
+  .course-block .sertificat img {
+    width: 29px; }
 .course-block .img {
   margin-bottom: 3px;
   width: 117px; }
@@ -5201,8 +5204,7 @@ section.css-shadow {
       justify-content: space-between; }
 
 .course-desc {
-  margin-left: -3px;
-  outline: 1px solid #000; }
+  margin-left: -3px; }
   .course-desc .title-name {
     margin-top: -7px;
     width: 405px;
@@ -5216,6 +5218,8 @@ section.css-shadow {
   position: relative;
   display: -ms-flexbox;
   display: flex;
+  padding-right: 53px;
+  max-width: 351px;
   margin-bottom: 12px; }
   .course-process div {
     display: inline-block; }
@@ -5223,20 +5227,18 @@ section.css-shadow {
     position: relative;
     box-sizing: border-box;
     margin-left: 20px;
-    padding-right: 20px;
+    padding-right: 35px;
     width: 100%;
-    outline: 1px solid #c00;
     vertical-align: top;
     line-height: 1; }
     .course-process .academic-performance .progress {
       position: relative;
-      height: 45px;
-      outline: 1px solid #cc0000;
-      width: 100%;
-      padding: 0 10px;
-      box-sizing: border-box;
       display: -ms-flexbox;
       display: flex;
+      box-sizing: border-box;
+      padding: 0 2px;
+      width: 100%;
+      height: 45px;
       -ms-flex-pack: justify;
           justify-content: space-between; }
     .course-process .academic-performance .line {
@@ -5298,21 +5300,24 @@ section.css-shadow {
     position: relative;
     top: 15px;
     color: black;
-    font: 400 13px/20px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
+    font: 400 13px/20px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    white-space: nowrap; }
   .course-process .addition-info {
     display: block;
-    margin-top: -3px; }
+    white-space: nowrap; }
     .course-process .addition-info:after {
       display: table;
       clear: both;
       content: ""; }
   .course-process .mark {
-    float: left;
+    vertical-align: top;
+    display: inline-block;
     white-space: normal;
     font: 400 13px/14px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
   .course-process .availability-cert {
-    float: right;
-    margin-right: -6px;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 34px;
     max-width: 100px;
     white-space: normal;
     font: 400 13px/14px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
@@ -5363,7 +5368,6 @@ section.css-shadow {
 
 .share-info {
   margin-bottom: 15px;
-  outline: 1px solid #c00;
   text-align: right;
   white-space: normal;
   font-size: 0;
@@ -5473,7 +5477,7 @@ section.css-shadow {
     overflow: hidden;
     height: 85px; }
 .skill-columns .competence-block .skill {
-  margin: 0;
+  margin: 0 0 7px 0;
   width: 525px;
   -webkit-column-count: 2;
      -moz-column-count: 2;
@@ -5501,9 +5505,13 @@ section.css-shadow {
   .skill-columns .competence-block .skill .el-progress-wrap,
   .skill-columns .competence-block .skill .progress {
     width: 81px; }
+.skill-columns .styled-cb label {
+  color: black;
+  font: 400 13px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
 
 .group-courses {
-  position: relative; }
+  position: relative;
+  margin-bottom: 20px; }
   .group-courses:before {
     position: absolute;
     top: 0;
@@ -5511,7 +5519,8 @@ section.css-shadow {
     left: 0;
     width: 4px;
     background-color: #5076f5;
-    content: ""; }
+    content: "";
+    z-index: 5; }
   .group-courses .css-shadow {
     margin-bottom: 0;
     border-bottom: 1px solid #eff4f7; }
@@ -5521,23 +5530,14 @@ section.css-shadow {
 .specializ-block .partner-logo {
   max-width: 47%;
   height: 30px;
-  outline: 1px solid;
   line-height: 30px; }
   .specializ-block .partner-logo img {
     vertical-align: middle; }
 .specializ-block .competence-block {
   padding-top: 10px;
   border-top: 1px solid #eff4f7; }
-
-.get-mail {
-  outline: 1px solid blue;
-  font: 400 13px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
-  color: black; }
-  .get-mail label {
-    display: inline-block;
-    margin-left: 3px; }
-  .get-mail input {
-    position: relative;
-    top: -2px; }
+.specializ-block .course-process {
+  padding-right: 6px;
+  max-width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
