--- a/dev/sass/pages/course1.sass
+++ b/dev/sass/pages/course1.sass
@@ -1,5 +1,5 @@
 .courses-page .css-shadow.cours-status
-  padding-bottom: 0
+  padding: 20px 26px 0
 
 .courses-status
   display: flex
@@ -16,12 +16,12 @@
   a
     display: inline-block
     box-sizing: border-box
-    height: 50px
+    height: 57px
     color: #000
     text-align: center
     text-decoration: none
     white-space: normal
-    font: 400 14px/50px $open
+    font: 400 14px/57px $open
     flex-grow: 2
 
     + a
@@ -31,24 +31,26 @@
         max-width: 132px
         flex-grow: 1
 
-
     &.active
       background-color: #e2e3e9
-
-
 
 .course-block
 
   .partner-logo
     display: inline-block
     margin-bottom: 10px
-    text-decoration: none
     vertical-align: top
-    
+    text-decoration: none
+
   .sertificat
     position: relative
-    top: 10px
-    margin-left: 3px
+    top: 13px
+    margin-left: 9px
+
+    img
+      width: 29px
+
+
 
   .img
     margin-bottom: 3px
@@ -60,7 +62,6 @@
 
 .course-desc
   margin-left: -3px
-  outline: 1px solid #000
 
   .title-name
     margin-top: -7px
@@ -70,7 +71,6 @@
 
     @media (max-width: $screen-xs-max)
 
-
     a
       color: black
       text-decoration: none
@@ -78,7 +78,8 @@
 .course-process
   position: relative
   display: flex
-  //white-space: nowrap
+  padding-right: 53px
+  max-width: 351px
   margin-bottom: 12px
 
   div
@@ -89,20 +90,18 @@
     box-sizing: border-box
     margin-left: 20px
     //width: 238px
-    padding-right: 20px
+    padding-right: 35px
     width: 100%
-    outline: 1px solid #c00
     vertical-align: top
     line-height: 1
-    
+
     .progress
       position: relative
-      height: 45px
-      outline: 1px solid #cc0000
-      width: 100%
-      padding: 0 10px
-      box-sizing: border-box
       display: flex
+      box-sizing: border-box
+      padding: 0 2px
+      width: 100%
+      height: 45px
       justify-content: space-between
 
     .line
@@ -114,7 +113,6 @@
       height: 2px
       background-color: #eff4f7
 
-
     .academic-item
       position: relative
       top: 19px
@@ -125,7 +123,6 @@
       height: 13px
       border-radius: 50%
       background-color: #eff4f7
-
 
       &:after
         position: absolute
@@ -158,12 +155,9 @@
           width: 9px
           height: 9px
 
-
         ~ .academic-item:not([class*='indic'])
           &:after
             display: none
-
-
 
       &.indic-success
         &:before
@@ -187,10 +181,12 @@
     top: 15px
     color: black
     font: 400 13px/20px $open
+    white-space: nowrap
+    //min-width: 90px
 
   .addition-info
     display: block
-    margin-top: -3px
+    white-space: nowrap
 
     &:after
       display: table
@@ -198,18 +194,18 @@
       content: ''
 
   .mark
-    float: left
-    white-space: normal
-    font: 400  13px/14px $open
-
-  .availability-cert
-    float: right
-    margin-right: -6px
-    max-width: 100px
+    vertical-align: top
+    display: inline-block
     white-space: normal
     font: 400 13px/14px $open
 
-
+  .availability-cert
+    display: inline-block
+    vertical-align: top
+    margin-left: 34px
+    max-width: 100px
+    white-space: normal
+    font: 400 13px/14px $open
 
 .rating
   display: block
@@ -224,7 +220,6 @@
     width: 100px
     font-size: 0
 
-
   input
     display: none
 
@@ -234,14 +229,12 @@
     background-image: url('data:image/svg+xml;charset=utf-8, <svg xmlns="http://www.w3.org/2000/svg"  x="0px" y="0px" viewBox="0 0 16 14" width="16" height="14"><path fill="#F9BE6B" d="M14.4,5.4l-3.9-0.4c-0.2,0-0.5-0.2-0.6-0.4L8.6,1.4c-0.2-0.5-1-0.5-1.2,0L6,4.7C5.9,4.9,5.7,5.1,5.5,5.1L1.6,5.4C1,5.5,0.8,6.2,1.2,6.6l2.9,2.5c0.2,0.2,0.3,0.4,0.2,0.6l-0.9,3.5c-0.1,0.6,0.5,1,1,0.7l3.2-1.8c0.2-0.1,0.5-0.1,0.7,0l3.2,1.8c0.5,0.3,1.1-0.2,1-0.7l-0.9-3.5c-0.1-0.2,0-0.5,0.2-0.6l2.9-2.5C15.2,6.2,15,5.5,14.4,5.4z"/></svg>')
     background-repeat: no-repeat
 
-
   //input:checked + label:hover:before,
   input:checked ~ label:hover:before,
   label:hover ~ input:checked ~ label:before,
   input:checked ~ label:hover ~ label:before
     background-image: url('data:image/svg+xml;charset=utf-8, <svg xmlns="http://www.w3.org/2000/svg"  x="0px" y="0px" viewBox="0 0 16 14" width="16" height="14"><path fill="#fbd197" d="M14.4,5.4l-3.9-0.4c-0.2,0-0.5-0.2-0.6-0.4L8.6,1.4c-0.2-0.5-1-0.5-1.2,0L6,4.7C5.9,4.9,5.7,5.1,5.5,5.1L1.6,5.4C1,5.5,0.8,6.2,1.2,6.6l2.9,2.5c0.2,0.2,0.3,0.4,0.2,0.6l-0.9,3.5c-0.1,0.6,0.5,1,1,0.7l3.2-1.8c0.2-0.1,0.5-0.1,0.7,0l3.2,1.8c0.5,0.3,1.1-0.2,1-0.7l-0.9-3.5c-0.1-0.2,0-0.5,0.2-0.6l2.9-2.5C15.2,6.2,15,5.5,14.4,5.4z"/></svg>')
     background-repeat: no-repeat
-
 
   label
     float: right
@@ -268,10 +261,8 @@
     top: -2px
     margin-right: 7px
 
-
 .share-info
   margin-bottom: 15px
-  outline: 1px solid #c00
   text-align: right
   white-space: normal
   font-size: 0
@@ -280,8 +271,6 @@
   @media (max-width: $screen-md-max)
     text-align: left
 
-
-  
   .visibility-block
 
     button
@@ -301,9 +290,9 @@
       width: 47px
       height: 47px
       background-color: #d3d4dc
-      
+
       &:before,
-      &:after  
+      &:after
         position: absolute
         top: 22px
         width: 11px
@@ -311,7 +300,6 @@
         background-color: black
         content: ''
         transition: all 0.1s ease
-
 
       &:before
         left: 14px
@@ -328,8 +316,6 @@
         &:after
           transform: rotate(45deg)
 
-
-    
   .hidden-block
     right: 15px
     z-index: 5
@@ -370,7 +356,7 @@
       font-weight: 300
       font-size: 30px
       line-height: 1
-    
+
 .competence-block
   clear: both
 
@@ -402,7 +388,7 @@
 
   .competence-block
     .skill
-      margin: 0
+      margin: 0 0 7px 0
       width: 525px
       column-count: 2
       column-gap: 0
@@ -428,22 +414,15 @@
       .progress
         width: 81px
 
-
-
-
-
-
-
-
-
-
-
-
+  .styled-cb label
+    color: black
+    font: 400 13px $open
 
 // page course 10.1 //group courses
 
 .group-courses
   position: relative
+  margin-bottom: 20px
 
   &:before
     position: absolute
@@ -453,12 +432,11 @@
     width: 4px
     background-color: #5076f5
     content: ''
-    
+    z-index: 5
+
   .css-shadow
     margin-bottom: 0
     border-bottom: 1px solid #eff4f7
-
-
 
 .specializ-block
   .title-name
@@ -467,7 +445,6 @@
   .partner-logo
     max-width: 47%
     height: 30px
-    outline: 1px solid
     line-height: 30px
 
     img
@@ -477,18 +454,6 @@
     padding-top: 10px
     border-top: 1px solid #eff4f7
 
-
-
-.get-mail
-  outline: 1px solid blue
-  font: 400 13px $open
-  color: black
-
-  label
-    display: inline-block
-    margin-left: 3px
-
-
-  input
-    position: relative
-    top: -2px
+  .course-process
+    padding-right: 6px
+    max-width: 100%
