--- a/dev/sass/pages/index.sass
+++ b/dev/sass/pages/index.sass
@@ -366,6 +366,8 @@
   border: 1px solid rgba(22, 26, 44, 0.1)
 
   .btn-bottom-group
+    font-size: 0
+    
     .el-btn + .el-btn
       margin-left: 10px
 
