--- a/css/style.css
+++ b/css/style.css
@@ -1362,6 +1362,666 @@ html {
 
   .col-lg-offset-12 {
     margin-left: 100%; } }
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+  position: relative;
+  min-height: 1px; }
+
+.container {
+  box-sizing: border-box;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px; }
+  @media (min-width: 768px) {
+    .container {
+      width: 750px; } }
+  @media (min-width: 992px) {
+    .container {
+      width: 970px; } }
+  @media (min-width: 1200px) {
+    .container {
+      width: 1170px; } }
+
+.container-fluid {
+  box-sizing: border-box;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px; }
+
+.row {
+  margin-left: -15px;
+  margin-right: -15px; }
+
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+  padding-left: 15px;
+  padding-right: 15px;
+  box-sizing: border-box; }
+
+.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
+  float: left; }
+
+.col-xs-1 {
+  width: 8.33333%; }
+
+.col-xs-2 {
+  width: 16.66667%; }
+
+.col-xs-3 {
+  width: 25%; }
+
+.col-xs-4 {
+  width: 33.33333%; }
+
+.col-xs-5 {
+  width: 41.66667%; }
+
+.col-xs-6 {
+  width: 50%; }
+
+.col-xs-7 {
+  width: 58.33333%; }
+
+.col-xs-8 {
+  width: 66.66667%; }
+
+.col-xs-9 {
+  width: 75%; }
+
+.col-xs-10 {
+  width: 83.33333%; }
+
+.col-xs-11 {
+  width: 91.66667%; }
+
+.col-xs-12 {
+  width: 100%; }
+
+.col-xs-pull-0 {
+  right: auto; }
+
+.col-xs-pull-1 {
+  right: 8.33333%; }
+
+.col-xs-pull-2 {
+  right: 16.66667%; }
+
+.col-xs-pull-3 {
+  right: 25%; }
+
+.col-xs-pull-4 {
+  right: 33.33333%; }
+
+.col-xs-pull-5 {
+  right: 41.66667%; }
+
+.col-xs-pull-6 {
+  right: 50%; }
+
+.col-xs-pull-7 {
+  right: 58.33333%; }
+
+.col-xs-pull-8 {
+  right: 66.66667%; }
+
+.col-xs-pull-9 {
+  right: 75%; }
+
+.col-xs-pull-10 {
+  right: 83.33333%; }
+
+.col-xs-pull-11 {
+  right: 91.66667%; }
+
+.col-xs-pull-12 {
+  right: 100%; }
+
+.col-xs-push-0 {
+  left: auto; }
+
+.col-xs-push-1 {
+  left: 8.33333%; }
+
+.col-xs-push-2 {
+  left: 16.66667%; }
+
+.col-xs-push-3 {
+  left: 25%; }
+
+.col-xs-push-4 {
+  left: 33.33333%; }
+
+.col-xs-push-5 {
+  left: 41.66667%; }
+
+.col-xs-push-6 {
+  left: 50%; }
+
+.col-xs-push-7 {
+  left: 58.33333%; }
+
+.col-xs-push-8 {
+  left: 66.66667%; }
+
+.col-xs-push-9 {
+  left: 75%; }
+
+.col-xs-push-10 {
+  left: 83.33333%; }
+
+.col-xs-push-11 {
+  left: 91.66667%; }
+
+.col-xs-push-12 {
+  left: 100%; }
+
+.col-xs-offset-0 {
+  margin-left: 0%; }
+
+.col-xs-offset-1 {
+  margin-left: 8.33333%; }
+
+.col-xs-offset-2 {
+  margin-left: 16.66667%; }
+
+.col-xs-offset-3 {
+  margin-left: 25%; }
+
+.col-xs-offset-4 {
+  margin-left: 33.33333%; }
+
+.col-xs-offset-5 {
+  margin-left: 41.66667%; }
+
+.col-xs-offset-6 {
+  margin-left: 50%; }
+
+.col-xs-offset-7 {
+  margin-left: 58.33333%; }
+
+.col-xs-offset-8 {
+  margin-left: 66.66667%; }
+
+.col-xs-offset-9 {
+  margin-left: 75%; }
+
+.col-xs-offset-10 {
+  margin-left: 83.33333%; }
+
+.col-xs-offset-11 {
+  margin-left: 91.66667%; }
+
+.col-xs-offset-12 {
+  margin-left: 100%; }
+
+@media (min-width: 768px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left; }
+
+  .col-sm-1 {
+    width: 8.33333%; }
+
+  .col-sm-2 {
+    width: 16.66667%; }
+
+  .col-sm-3 {
+    width: 25%; }
+
+  .col-sm-4 {
+    width: 33.33333%; }
+
+  .col-sm-5 {
+    width: 41.66667%; }
+
+  .col-sm-6 {
+    width: 50%; }
+
+  .col-sm-7 {
+    width: 58.33333%; }
+
+  .col-sm-8 {
+    width: 66.66667%; }
+
+  .col-sm-9 {
+    width: 75%; }
+
+  .col-sm-10 {
+    width: 83.33333%; }
+
+  .col-sm-11 {
+    width: 91.66667%; }
+
+  .col-sm-12 {
+    width: 100%; }
+
+  .col-sm-pull-0 {
+    right: auto; }
+
+  .col-sm-pull-1 {
+    right: 8.33333%; }
+
+  .col-sm-pull-2 {
+    right: 16.66667%; }
+
+  .col-sm-pull-3 {
+    right: 25%; }
+
+  .col-sm-pull-4 {
+    right: 33.33333%; }
+
+  .col-sm-pull-5 {
+    right: 41.66667%; }
+
+  .col-sm-pull-6 {
+    right: 50%; }
+
+  .col-sm-pull-7 {
+    right: 58.33333%; }
+
+  .col-sm-pull-8 {
+    right: 66.66667%; }
+
+  .col-sm-pull-9 {
+    right: 75%; }
+
+  .col-sm-pull-10 {
+    right: 83.33333%; }
+
+  .col-sm-pull-11 {
+    right: 91.66667%; }
+
+  .col-sm-pull-12 {
+    right: 100%; }
+
+  .col-sm-push-0 {
+    left: auto; }
+
+  .col-sm-push-1 {
+    left: 8.33333%; }
+
+  .col-sm-push-2 {
+    left: 16.66667%; }
+
+  .col-sm-push-3 {
+    left: 25%; }
+
+  .col-sm-push-4 {
+    left: 33.33333%; }
+
+  .col-sm-push-5 {
+    left: 41.66667%; }
+
+  .col-sm-push-6 {
+    left: 50%; }
+
+  .col-sm-push-7 {
+    left: 58.33333%; }
+
+  .col-sm-push-8 {
+    left: 66.66667%; }
+
+  .col-sm-push-9 {
+    left: 75%; }
+
+  .col-sm-push-10 {
+    left: 83.33333%; }
+
+  .col-sm-push-11 {
+    left: 91.66667%; }
+
+  .col-sm-push-12 {
+    left: 100%; }
+
+  .col-sm-offset-0 {
+    margin-left: 0%; }
+
+  .col-sm-offset-1 {
+    margin-left: 8.33333%; }
+
+  .col-sm-offset-2 {
+    margin-left: 16.66667%; }
+
+  .col-sm-offset-3 {
+    margin-left: 25%; }
+
+  .col-sm-offset-4 {
+    margin-left: 33.33333%; }
+
+  .col-sm-offset-5 {
+    margin-left: 41.66667%; }
+
+  .col-sm-offset-6 {
+    margin-left: 50%; }
+
+  .col-sm-offset-7 {
+    margin-left: 58.33333%; }
+
+  .col-sm-offset-8 {
+    margin-left: 66.66667%; }
+
+  .col-sm-offset-9 {
+    margin-left: 75%; }
+
+  .col-sm-offset-10 {
+    margin-left: 83.33333%; }
+
+  .col-sm-offset-11 {
+    margin-left: 91.66667%; }
+
+  .col-sm-offset-12 {
+    margin-left: 100%; } }
+@media (min-width: 992px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left; }
+
+  .col-md-1 {
+    width: 8.33333%; }
+
+  .col-md-2 {
+    width: 16.66667%; }
+
+  .col-md-3 {
+    width: 25%; }
+
+  .col-md-4 {
+    width: 33.33333%; }
+
+  .col-md-5 {
+    width: 41.66667%; }
+
+  .col-md-6 {
+    width: 50%; }
+
+  .col-md-7 {
+    width: 58.33333%; }
+
+  .col-md-8 {
+    width: 66.66667%; }
+
+  .col-md-9 {
+    width: 75%; }
+
+  .col-md-10 {
+    width: 83.33333%; }
+
+  .col-md-11 {
+    width: 91.66667%; }
+
+  .col-md-12 {
+    width: 100%; }
+
+  .col-md-pull-0 {
+    right: auto; }
+
+  .col-md-pull-1 {
+    right: 8.33333%; }
+
+  .col-md-pull-2 {
+    right: 16.66667%; }
+
+  .col-md-pull-3 {
+    right: 25%; }
+
+  .col-md-pull-4 {
+    right: 33.33333%; }
+
+  .col-md-pull-5 {
+    right: 41.66667%; }
+
+  .col-md-pull-6 {
+    right: 50%; }
+
+  .col-md-pull-7 {
+    right: 58.33333%; }
+
+  .col-md-pull-8 {
+    right: 66.66667%; }
+
+  .col-md-pull-9 {
+    right: 75%; }
+
+  .col-md-pull-10 {
+    right: 83.33333%; }
+
+  .col-md-pull-11 {
+    right: 91.66667%; }
+
+  .col-md-pull-12 {
+    right: 100%; }
+
+  .col-md-push-0 {
+    left: auto; }
+
+  .col-md-push-1 {
+    left: 8.33333%; }
+
+  .col-md-push-2 {
+    left: 16.66667%; }
+
+  .col-md-push-3 {
+    left: 25%; }
+
+  .col-md-push-4 {
+    left: 33.33333%; }
+
+  .col-md-push-5 {
+    left: 41.66667%; }
+
+  .col-md-push-6 {
+    left: 50%; }
+
+  .col-md-push-7 {
+    left: 58.33333%; }
+
+  .col-md-push-8 {
+    left: 66.66667%; }
+
+  .col-md-push-9 {
+    left: 75%; }
+
+  .col-md-push-10 {
+    left: 83.33333%; }
+
+  .col-md-push-11 {
+    left: 91.66667%; }
+
+  .col-md-push-12 {
+    left: 100%; }
+
+  .col-md-offset-0 {
+    margin-left: 0%; }
+
+  .col-md-offset-1 {
+    margin-left: 8.33333%; }
+
+  .col-md-offset-2 {
+    margin-left: 16.66667%; }
+
+  .col-md-offset-3 {
+    margin-left: 25%; }
+
+  .col-md-offset-4 {
+    margin-left: 33.33333%; }
+
+  .col-md-offset-5 {
+    margin-left: 41.66667%; }
+
+  .col-md-offset-6 {
+    margin-left: 50%; }
+
+  .col-md-offset-7 {
+    margin-left: 58.33333%; }
+
+  .col-md-offset-8 {
+    margin-left: 66.66667%; }
+
+  .col-md-offset-9 {
+    margin-left: 75%; }
+
+  .col-md-offset-10 {
+    margin-left: 83.33333%; }
+
+  .col-md-offset-11 {
+    margin-left: 91.66667%; }
+
+  .col-md-offset-12 {
+    margin-left: 100%; } }
+@media (min-width: 1200px) {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left; }
+
+  .col-lg-1 {
+    width: 8.33333%; }
+
+  .col-lg-2 {
+    width: 16.66667%; }
+
+  .col-lg-3 {
+    width: 25%; }
+
+  .col-lg-4 {
+    width: 33.33333%; }
+
+  .col-lg-5 {
+    width: 41.66667%; }
+
+  .col-lg-6 {
+    width: 50%; }
+
+  .col-lg-7 {
+    width: 58.33333%; }
+
+  .col-lg-8 {
+    width: 66.66667%; }
+
+  .col-lg-9 {
+    width: 75%; }
+
+  .col-lg-10 {
+    width: 83.33333%; }
+
+  .col-lg-11 {
+    width: 91.66667%; }
+
+  .col-lg-12 {
+    width: 100%; }
+
+  .col-lg-pull-0 {
+    right: auto; }
+
+  .col-lg-pull-1 {
+    right: 8.33333%; }
+
+  .col-lg-pull-2 {
+    right: 16.66667%; }
+
+  .col-lg-pull-3 {
+    right: 25%; }
+
+  .col-lg-pull-4 {
+    right: 33.33333%; }
+
+  .col-lg-pull-5 {
+    right: 41.66667%; }
+
+  .col-lg-pull-6 {
+    right: 50%; }
+
+  .col-lg-pull-7 {
+    right: 58.33333%; }
+
+  .col-lg-pull-8 {
+    right: 66.66667%; }
+
+  .col-lg-pull-9 {
+    right: 75%; }
+
+  .col-lg-pull-10 {
+    right: 83.33333%; }
+
+  .col-lg-pull-11 {
+    right: 91.66667%; }
+
+  .col-lg-pull-12 {
+    right: 100%; }
+
+  .col-lg-push-0 {
+    left: auto; }
+
+  .col-lg-push-1 {
+    left: 8.33333%; }
+
+  .col-lg-push-2 {
+    left: 16.66667%; }
+
+  .col-lg-push-3 {
+    left: 25%; }
+
+  .col-lg-push-4 {
+    left: 33.33333%; }
+
+  .col-lg-push-5 {
+    left: 41.66667%; }
+
+  .col-lg-push-6 {
+    left: 50%; }
+
+  .col-lg-push-7 {
+    left: 58.33333%; }
+
+  .col-lg-push-8 {
+    left: 66.66667%; }
+
+  .col-lg-push-9 {
+    left: 75%; }
+
+  .col-lg-push-10 {
+    left: 83.33333%; }
+
+  .col-lg-push-11 {
+    left: 91.66667%; }
+
+  .col-lg-push-12 {
+    left: 100%; }
+
+  .col-lg-offset-0 {
+    margin-left: 0%; }
+
+  .col-lg-offset-1 {
+    margin-left: 8.33333%; }
+
+  .col-lg-offset-2 {
+    margin-left: 16.66667%; }
+
+  .col-lg-offset-3 {
+    margin-left: 25%; }
+
+  .col-lg-offset-4 {
+    margin-left: 33.33333%; }
+
+  .col-lg-offset-5 {
+    margin-left: 41.66667%; }
+
+  .col-lg-offset-6 {
+    margin-left: 50%; }
+
+  .col-lg-offset-7 {
+    margin-left: 58.33333%; }
+
+  .col-lg-offset-8 {
+    margin-left: 66.66667%; }
+
+  .col-lg-offset-9 {
+    margin-left: 75%; }
+
+  .col-lg-offset-10 {
+    margin-left: 83.33333%; }
+
+  .col-lg-offset-11 {
+    margin-left: 91.66667%; }
+
+  .col-lg-offset-12 {
+    margin-left: 100%; } }
 .text-xs-left {
   text-align: left; }
 .text-xs-right {
@@ -2727,6 +3387,82 @@ section.css-shadow {
       color: white;
       font: 300 13px/15px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
 
+.not-found-page .catalog-list ul {
+  margin-top: 0; }
+.not-found-page .page-content {
+  padding: 71px 0; }
+  @media (max-width: 767px) {
+    .not-found-page .page-content {
+      padding: 45px 0; } }
+.not-found-page .form-search {
+  padding-right: 95px;
+  margin-bottom: 20px; }
+  .not-found-page .form-search .el-btn {
+    width: 97px; }
+@media (max-width: 991px) {
+  .not-found-page .title-section {
+    text-align: center; } }
+
+.block-404 {
+  padding-top: 51px;
+  margin-bottom: 47px; }
+  .block-404:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .block-404 .img {
+    color: #dfe3f6;
+    font: 700 190px/190px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    float: left;
+    margin-right: 24px; }
+    @media (max-width: 991px) {
+      .block-404 .img {
+        float: none;
+        text-align: center; } }
+  .block-404 .description {
+    padding-top: 21px;
+    overflow: hidden; }
+  .block-404 .note {
+    font: 400 18px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: black;
+    margin-bottom: 21px; }
+  .block-404 .style-text-5 {
+    font: 400 14px/18px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: black; }
+    .block-404 .style-text-5 a {
+      color: #9b9b9b; }
+
+.form-search {
+  position: relative;
+  padding-right: 125px;
+  box-sizing: border-box; }
+  @media (max-width: 991px) {
+    .form-search {
+      margin: 20px auto 50px; } }
+  .form-search input {
+    box-sizing: border-box;
+    padding: 11px 20px;
+    padding-right: 50px;
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-bottom: 1px solid white;
+    border-radius: 3px;
+    background: white;
+    box-shadow: none;
+    color: black;
+    font: 400 14px/36px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  .form-search .el-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 130px;
+    border: none;
+    border-radius: 0 3px 3px 0; }
+    .form-search .el-btn:hover {
+      background-color: #3653b3;
+      color: white; }
+
 @media (max-width: 1340px) {
   .home-page {
     overflow: hidden; } }
@@ -2751,36 +3487,6 @@ section.css-shadow {
   padding: 0 0 80px;
   min-height: 700px;
   background-color: #f5f7ff; }
-.home-page .catalog-list {
-  width: 100%;
-  background-color: white;
-  box-shadow: 0 6px 30px rgba(22, 26, 44, 0.1); }
-  .home-page .catalog-list ul {
-    margin-top: -60px; }
-  .home-page .catalog-list li {
-    border-bottom: 1px solid #f5f7ff; }
-    .home-page .catalog-list li.title {
-      height: 60px;
-      border-bottom: none;
-      background-color: #4a72f5; }
-      .home-page .catalog-list li.title a {
-        padding: 20px 30px;
-        color: white;
-        font: 700 14px/20px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
-        .home-page .catalog-list li.title a:hover {
-          background-color: #4a72f5; }
-    .home-page .catalog-list li a {
-      display: block;
-      padding: 14px 30px 15px;
-      color: black;
-      text-decoration: none;
-      font: 400 14px/20px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
-      transition: background 0.2s ease; }
-      .home-page .catalog-list li a:hover {
-        background-color: #f5f7ff; }
-      @media (max-width: 767px) {
-        .home-page .catalog-list li a {
-          text-align: center; } }
 .home-page [class*="section"] .title-section {
   margin-bottom: 25px; }
   .home-page [class*="section"] .title-section h2 {
@@ -3049,6 +3755,37 @@ section.css-shadow {
   margin-left: 26px;
   color: #4a4a4a;
   font: 400 13px/43px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
+
+.catalog-list {
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 6px 30px rgba(22, 26, 44, 0.1); }
+  .catalog-list ul {
+    margin-top: -60px; }
+  .catalog-list li {
+    border-bottom: 1px solid #f5f7ff; }
+    .catalog-list li.title {
+      height: 60px;
+      border-bottom: none;
+      background-color: #4a72f5; }
+      .catalog-list li.title a {
+        padding: 20px 30px;
+        color: white;
+        font: 700 14px/20px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
+        .catalog-list li.title a:hover {
+          background-color: #4a72f5; }
+    .catalog-list li a {
+      display: block;
+      padding: 14px 30px 15px;
+      color: black;
+      text-decoration: none;
+      font: 400 14px/20px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+      transition: background 0.2s ease; }
+      .catalog-list li a:hover {
+        background-color: #f5f7ff; }
+      @media (max-width: 767px) {
+        .catalog-list li a {
+          text-align: center; } }
 
 .section-banner {
   min-height: 590px;
@@ -5607,5 +6344,81 @@ section.css-shadow {
         font-weight: 300; }
 .search-page .section-result .el-item-course {
   margin-bottom: 30px; }
+
+.not-found-page .catalog-list ul {
+  margin-top: 0; }
+.not-found-page .page-content {
+  padding: 71px 0; }
+  @media (max-width: 767px) {
+    .not-found-page .page-content {
+      padding: 45px 0; } }
+.not-found-page .form-search {
+  padding-right: 95px;
+  margin-bottom: 20px; }
+  .not-found-page .form-search .el-btn {
+    width: 97px; }
+@media (max-width: 991px) {
+  .not-found-page .title-section {
+    text-align: center; } }
+
+.block-404 {
+  padding-top: 51px;
+  margin-bottom: 47px; }
+  .block-404:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .block-404 .img {
+    color: #dfe3f6;
+    font: 700 190px/190px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    float: left;
+    margin-right: 24px; }
+    @media (max-width: 991px) {
+      .block-404 .img {
+        float: none;
+        text-align: center; } }
+  .block-404 .description {
+    padding-top: 21px;
+    overflow: hidden; }
+  .block-404 .note {
+    font: 400 18px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: black;
+    margin-bottom: 21px; }
+  .block-404 .style-text-5 {
+    font: 400 14px/18px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: black; }
+    .block-404 .style-text-5 a {
+      color: #9b9b9b; }
+
+.form-search {
+  position: relative;
+  padding-right: 125px;
+  box-sizing: border-box; }
+  @media (max-width: 991px) {
+    .form-search {
+      margin: 20px auto 50px; } }
+  .form-search input {
+    box-sizing: border-box;
+    padding: 11px 20px;
+    padding-right: 50px;
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-bottom: 1px solid white;
+    border-radius: 3px;
+    background: white;
+    box-shadow: none;
+    color: black;
+    font: 400 14px/36px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  .form-search .el-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 130px;
+    border: none;
+    border-radius: 0 3px 3px 0; }
+    .form-search .el-btn:hover {
+      background-color: #3653b3;
+      color: white; }
 
 /*# sourceMappingURL=style.css.map */
