--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -9,7 +9,7 @@
 // import grid
 //-----------------------------------------------------------------------------------
 @import standards/structure-grid-bootstrap.sass
-//@import standards/structure-grid-bootstrap-all.sass ----- with pull/push
+@import standards/structure-grid-bootstrap-all.sass
 @import standards/responsive-utilities.sass
 //@import standards/structure-grid.sass
 
@@ -34,6 +34,7 @@
 @import pages/home.sass
 @import pages/course1.sass
 @import pages/search.sass
+@import pages/404.sass
 
 
 
