--- a/dev/sass/components/plugin.sass
+++ b/dev/sass/components/plugin.sass
@@ -1,2 +1,53 @@
 // plugin
 //-----------------------------------------------------------------------------------
+.ui-state-default, .ui-widget-content .ui-state-default,
+.ui-widget-header .ui-state-default,
+.ui-button, html .ui-button.ui-state-disabled:hover,
+html .ui-button.ui-state-disabled:active
+  border-color: #dce1e7
+  background: #e8ecf0
+  color: #ababab
+
+.ui-widget-header
+  border-color: #dce1e7
+  background: #4a72f5
+  color: #fff
+  font-weight: bold
+
+.ui-widget
+  font-family: $open
+
+.ui-datepicker th
+  font-weight: 300
+
+
+.ui-state-highlight, .ui-widget-content .ui-state-highlight,
+.ui-widget-header .ui-state-highlight
+  border: 1px solid #4a72f5
+  background: #4a72f5
+  color: #ffffff
+
+.ui-datepicker
+  width: 248px
+  box-sizing: border-box
+
+.ui-state-hover,
+.ui-widget-header .ui-state-hover,.ui-state-focus,
+.ui-state-hover .ui-datepicker-prev,
+.ui-state-hover .ui-datepicker-next,
+.ui-widget-header .ui-state-focus
+  border-color: #dce1e7
+  background: #588cf5
+  color: #2b2b2b
+
+
+.ui-state-active, .ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active, a.ui-button:active,
+.ui-button:active, .ui-button.ui-state-active:hover
+  border: 1px solid #ffe18f
+  background: #ffe18f
+  font-weight: normal
+  color: #fff
+
+.ui-widget.ui-widget-content
+  border-color: #dce1e7
